complete translation of framewrok-ext.apk

--- a/Indonesian/main/framework-ext-res.apk/res/values-in/strings.xml
+++ b/Indonesian/main/framework-ext-res.apk/res/values-in/strings.xml
@@ -1,35 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="status_bar_toggle_ac">Kunci layar</string>
-    <string name="status_bar_toggle_bluetooth">Bluetooth</string>
-    <string name="status_bar_toggle_brightness">Kecerahan</string>
-    <string name="status_bar_toggle_auto_brightness">Kecerahan</string>
-    <string name="status_bar_toggle_data">Data seluler</string>
-    <string name="status_bar_toggle_divider">Lainnya</string>
-    <string name="status_bar_toggle_flight_mode">Pesawat</string>
-    <string name="status_bar_toggle_gps">GPS</string>
-    <string name="status_bar_toggle_lock">Kunci</string>
-    <string name="status_bar_toggle_mute">Hening</string>
-    <string name="status_bar_toggle_network_type">Jaringan</string>
-    <string name="status_bar_toggle_privacy_mode">Tamu</string>
-    <string name="status_bar_toggle_reboot">Mulai lagi</string>
-    <string name="status_bar_toggle_rotate">Rotasi mati</string>
-    <string name="status_bar_toggle_screen_button">Nonaktif</string>
-    <string name="status_bar_toggle_screenshot">Screenshot</string>
-    <string name="status_bar_toggle_shutdown">Daya</string>
-    <string name="status_bar_toggle_sync">Sinkron</string>
-    <string name="status_bar_toggle_torch">Senter</string>
-    <string name="status_bar_toggle_vibrate">Getar</string>
-    <string name="status_bar_toggle_wifi">Wi-Fi</string>
-    <string name="status_bar_toggle_power_mode">Performa</string>
-    <string name="status_bar_toggle_drive_mode">Mobil</string>
-    <string name="status_bar_toggle_wifi_ap">Hotspot</string>
-    <string name="status_bar_toggle_quiet_mode">Jgn ganggu</string>
-    <string name="status_bar_toggle_paper_mode">Mode Baca</string>
-    <string name="status_bar_toggle_sync_auto">Sinkron</string>
-    <string name="status_bar_toggle_sync_manual">Sinkron</string>
-    <string name="status_bar_toggle_syncing">Menyinkron</string>
-    <string name="screen_rotation_freeze_message">Rotasi-otomatis nonaktif.</string>
-    <string name="screen_button_disabled_message">Tombol navigasi dinonaktifkan. Untuk aktifkan ulang, tekan tombol Beranda dan Daya bersamaan.</string>
-    <string name="screen_button_enabled_message">Tombol navigasi diaktifkan.</string>
+  <string name="status_bar_toggle_ac">Kunci layar</string>
+  <string name="status_bar_toggle_bluetooth">Bluetooth</string>
+  <string name="status_bar_toggle_brightness">Kecerahan</string>
+  <string name="status_bar_toggle_auto_brightness">Kecerahan</string>
+  <string name="status_bar_toggle_data">Data seluler</string>
+  <string name="status_bar_toggle_divider">Lainnya</string>
+  <string name="status_bar_toggle_flight_mode">Pesawat</string>
+  <string name="status_bar_toggle_gps">GPS</string>
+  <string name="status_bar_toggle_lock">Kunci</string>
+  <string name="status_bar_toggle_mute">Hening</string>
+  <string name="status_bar_toggle_network_type">Jaringan</string>
+  <string name="status_bar_toggle_privacy_mode">Tamu</string>
+  <string name="status_bar_toggle_reboot">Mulai lagi</string>
+  <string name="status_bar_toggle_rotate">Rotasi mati</string>
+  <string name="status_bar_toggle_screen_button">Nonaktif</string>
+  <string name="status_bar_toggle_screenshot">Screenshot</string>
+  <string name="status_bar_toggle_shutdown">Daya</string>
+  <string name="status_bar_toggle_sync">Sinkron</string>
+  <string name="status_bar_toggle_torch">Senter</string>
+  <string name="status_bar_toggle_vibrate">Getar</string>
+  <string name="status_bar_toggle_wifi">Wi-Fi</string>
+  <string name="status_bar_toggle_power_mode">Performa</string>
+  <string name="status_bar_toggle_drive_mode">Mobil</string>
+  <string name="status_bar_toggle_wifi_ap">Hotspot</string>
+  <string name="status_bar_toggle_quiet_mode">Jgn ganggu</string>
+  <string name="status_bar_toggle_paper_mode">Mode Baca</string>
+  <string name="status_bar_toggle_sync_auto">Sinkron</string>
+  <string name="status_bar_toggle_sync_manual">Sinkron</string>
+  <string name="status_bar_toggle_syncing">Menyinkron</string>
+  <string name="screen_rotation_freeze_message">Rotasi-otomatis nonaktif.</string>
+  <string name="screen_button_disabled_message">Tombol navigasi dinonaktifkan. Untuk aktifkan ulang, tekan tombol Beranda dan Daya bersamaan.</string>
+  <string name="screen_button_enabled_message">Tombol navigasi diaktifkan.</string>
+  <string name="perm_send_push_dspt">Allow Mi push messages</string>
+  <string name="perm_send_push_lab">Kirim pesan push</string>
+  <string name="select">Pilih</string>
+  <string name="select_all">Pilih semua</string>
+  <string name="cut">Potong</string>
+  <string name="copy">Salin</string>
+  <string name="paste">Tempel</string>
+  <string name="replace">Ganti</string>
+  <string name="alwaysUsePrompt">Ingat pilihan ini</string>
+  <string name="auto_start_warning_title">Selalu perbolehkan %s mulai otomatis?</string>
+  <string name="auto_start_warning_allow">Perbolehkan</string>
+  <string name="auto_start_warning_deny">Tolak</string>
+  <string name="call_record_sample_prefix_miui">Panggil</string>
+  <string name="call_record_or">" atau "</string>
+  <string name="caller_info_name_delimiter">" atau "</string>
+  <string name="first_back_long_press_message">"Tekan dan tahan tombol kembali utk menutup proses sekarang dan proses latar belakang.
+
+Utk menyalakan fitur ini, ke Pengaturan &gt; Sistem &gt; Tombol"</string>
+  <string name="force_exit_message">Tutup paksa %1$s</string>
+  <string name="force_exit_skip_message">"Tak dapat menutup %1$s karena dibutuhkan oleh sistem."</string>
+  <string name="fm_record_smaple_prefix_miui">Merekam FM</string>
+  <string name="global_actions_airplane_mode">Mode pesawat</string>
+  <string name="global_actions_reboot">Mulai ulang</string>
+  <string name="global_actions_shutdown">Matikan</string>
+  <string name="global_actions_silent_mode">Mode senyap</string>
+  <string name="key_btn_space">Spasi</string>
+  <string name="key_btn_ok" />
+  <string name="lockscreen_access_pattern_start">Pola dimulai</string>
+  <string name="lockscreen_access_pattern_cleared">Pola dibatalkan</string>
+  <string name="lockscreen_access_pattern_cell_added">Panggilan berakhir</string>
+  <string name="lockscreen_access_pattern_detected">Pola selesai</string>
+  <string name="memory_clear_result">%1$sB dibersihkan | %2$sB tersedia</string>
+  <string name="memory_clear_nothing_result">Tak ada yg bisa dibersihkan</string>
+  <string name="shutdown_confirm_title">Telepon akan dimatikan.</string>
+  <string name="shutdown_progress">Mematikan telepon...</string>
+  <string name="reboot_confirm_title">Telepon akan dimulai ulang</string>
+  <string name="reboot_progress">Memulai ulang...</string>
+  <string name="screen_on_proximity_sensor_title">Cegah kesalahan tekan</string>
+  <string name="screen_on_proximity_sensor_summary">"Jngan tutupi area oranye pada layar"</string>
+  <string name="screen_on_proximity_sensor_hint">Untuk mematikan fitur ini, tekan tombol Kembali dan Volume atas bersamaan</string>
+  <string name="screen_button_notification_title">Tombol navigasi dimatikan</string>
+  <string name="screen_button_notification_text">Untuk menyalakan, tekan tombol Home dan Power bersamaan</string>
+  <string name="screen_paper_mode_enter_toast">Mode baca aktif. Kamu dapat menyalakan fitur ini kapanpun di Setelan tambahan &gt; Mode operasi satu tangan</string>
+  <string name="sim_added_reboot_title">Kartu SIM akan diaktif setelah telepon dimulai ulang</string>
+  <string name="sim_added_reboot_confirm">Muat ulang</string>
+  <string name="softap_notifif_title">Hotspot \"%s\" aktif</string>
+  <string name="softap_notifif_summary">%d terhubung</string>
+  <string name="unknown_caller">Nomor tak dikenal</string>
+  <string name="handy_mode_title">Mode satu tangan</string>
+  <string name="handy_mode_summary">Untuk menutup, sentuh bagian kosong di layar</string>
 </resources>
